--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "loose-envify": "^1.0.0",
     "prettier": "^3.0.0"
   },
   "peerDependencies": {
