--- a/package.json
+++ b/package.json
@@ -6,22 +6,6 @@
   "author": "ryan-dia",
   "license": "MIT",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "loose-envify": "^1.0.0",
-    "prettier": "^3.0.0"
-  },
-  "peerDependencies": {
-    "eslint": "^8.45.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "prettier": "^3.0.0"
-  },
-  "devDependencies": {
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-plugin-prettier": "^5.0.0"
+    "loose-envify": "^1.4.0"
   }
 }
