--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "author": "ryan-dia",
   "license": "MIT",
   "dependencies": {
-    "loose-envify": "^1.4.0"
+    "loose-envify": "1.0.0"
   }
 }
