@sentry/angular v7.8.1 추가

--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "loose-envify": "1.1.0"
+  },
+  "peerDependencies": {
+    "@sentry/angular": "7.8.1"
   }
 }
